--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css"/>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <div id="head">
 	</div>
 	<div id="body">
 	  <div class="inner">
-	    <div id="flag">
+	    <div id="flag" class="blue">
 		  <div class="blue">
 		  </div>
 		  <div class="white">
