--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css"/>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <div id="head">
+	  <div class="inner">
+  	    <div id="m2014">
+		  <span style="color:#0055A4">M</span><span style="color:#EF4135">2014</span><span style="color:#DDD">.fr</span>
+		</div>
+		<div id="clock">
+		  15 mars : lancement officiel
+		</div>
+	  </div>
 	</div>
 	<div id="body">
 	  <div class="inner">
