--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css"/>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -21,6 +22,16 @@
 	  <div class="inner">
 	    <div id="flag" class="blue">
 		  <div class="blue">
+		    <div style="
+				position: absolute;
+				top: 35px;
+				left: 35px;
+				width: 600px;
+				font-size: 18px;
+				font-weight: bold;
+			">
+			  En 2014, vivez la première campagne numérique pour les municipales.
+			</div>
 		  </div>
 		  <div class="white">
 		  </div>
