--- a/index.htm
+++ b/index.htm
@@ -14,13 +14,23 @@
       <div class="blue">
 	<div style="
           position: absolute;
-	  top: 35px;
-	  left: 35px;
+	  top: 165px;
+	  left: 155px;
 	  width: 600px;
-	  font-size: 18px;
+	  font-size: 21px;
 	  font-weight: bold;
 	">
-	  En 2014, vivez la première campagne numérique pour les municipales.
+	  En 2014, la campagne pour les municipales devient 
+	</div>
+	<div style="
+          position: absolute;
+	  top: 199px;
+	  left: 585px;
+	  width: 600px;
+	  font-size: 29px;
+	  font-weight: bold;
+	">
+	  numérique
 	</div>
       </div>
       <div class="white">
