--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,64 @@
 	</div>
       </div>
       <div class="white">
+
+	<div style="
+          position: absolute;
+	  top: 35px;
+	  left: 55px;
+	  width: 600px;
+	  font-size: 29px;
+	  font-weight: bold;
+	  color: #888;
+	">
+	  Restez informés&nbsp;!	  
+	</div>
+
+	<div style="
+          position: absolute;
+	  top: 145px;
+	  left: 85px;
+	  width: 600px;
+	  font-size: 29px;
+	  color: #333;
+	  font-weight: bold;
+	">
+	  Le blog M2014
+	</div>
+
+	<div style="
+          position: absolute;
+	  top: 137px;
+	  left: 335px;
+	  width: 600px;
+	  font-size: 21px;
+	">
+	  Actualités, enquêtes et décryptage <br/> sur les questions de campagne numérique.
+	</div>
+
+	<div style="
+          position: absolute;
+	  top: 255px;
+	  left: 85px;
+	  width: 600px;
+	  font-size: 29px;
+	  color: #333;
+	  font-weight: bold;
+	">
+	  Nos formations
+	</div>
+
+	<div style="
+          position: absolute;
+	  top: 247px;
+	  left: 335px;
+	  width: 600px;
+	  font-size: 21px;
+	">
+	  Comment structurer sa campagne en ligne&nbsp;? <br/>
+	  Impliquer et mobiliser les électeurs&nbsp;? 	  
+	</div>
+
       </div>
       <div class="red">
       </div>
