--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,6 @@
 	  width: 600px;
 	  font-size: 29px;
 	  font-weight: bold;
-	  color: #888;
 	">
 	  Restez informés&nbsp;!	  
 	</div>
@@ -78,7 +77,7 @@
 	  color: #333;
 	  font-weight: bold;
 	">
-	  Nos formations
+	  Les formations
 	</div>
 
 	<div style="
@@ -94,6 +93,9 @@
 
       </div>
       <div class="red">
+	
+	
+
       </div>
     </div>
   </div>
