--- a/index.htm
+++ b/index.htm
@@ -37,64 +37,64 @@
 
 	<div style="
           position: absolute;
-	  top: 35px;
-	  left: 55px;
-	  width: 600px;
+	  top: 45px;
+	  left: 45px;
+	  width: 800px;
 	  font-size: 29px;
 	  font-weight: bold;
+	  color: #555;
 	">
-	  Restez informés&nbsp;!	  
+	  Un blog qui aborde les grandes questions...
 	</div>
-
+	  
 	<div style="
           position: absolute;
-	  top: 145px;
-	  left: 85px;
-	  width: 600px;
-	  font-size: 29px;
-	  color: #333;
+	  top: 130px;
+	  left: 65px;
+	  width: 800px;
+	  font-size: 19px;
 	  font-weight: bold;
 	">
-	  Le blog M2014
+	  Comment les politiques locaux s'adapteront-ils aux nouveaux usages&nbsp;?
 	</div>
 
 	<div style="
           position: absolute;
-	  top: 137px;
-	  left: 335px;
-	  width: 600px;
-	  font-size: 21px;
-	">
-	  Actualités, enquêtes et décryptage <br/> sur les questions de campagne numérique.
-	</div>
-
-	<div style="
-          position: absolute;
-	  top: 255px;
-	  left: 85px;
-	  width: 600px;
-	  font-size: 29px;
-	  color: #333;
+	  top: 190px;
+	  left: 105px;
+	  width: 800px;
+	  font-size: 19px;
 	  font-weight: bold;
 	">
-	  Les formations
+	  Ce changement va-t-il accentuer le renouvellement des élus&nbsp;?
 	</div>
 
 	<div style="
           position: absolute;
-	  top: 247px;
-	  left: 335px;
-	  width: 600px;
-	  font-size: 21px;
+	  top: 250px;
+	  left: 135px;
+	  width: 800px;
+	  font-size: 19px;
+	  font-weight: bold;
 	">
-	  Comment structurer sa campagne en ligne&nbsp;? <br/>
-	  Impliquer et mobiliser les électeurs&nbsp;? 	  
+	  Quel sera l'impact du numérique sur les programmes et les résultats&nbsp;?
 	</div>
 
+	<div style="
+          position: absolute;
+	  top: 320px;
+	  left: 45px;
+	  width: 800px;
+	  text-align: right;
+	  font-size: 29px;
+	  font-weight: bold;
+	  color: #555;
+	">
+	  ...et des formations pour les approfondir.
+	</div>
+	  
       </div>
-      <div class="red">
-	
-	
+      <div class="red">		
 
       </div>
     </div>
