--- a/index.htm
+++ b/index.htm
@@ -96,6 +96,56 @@
       </div>
       <div class="red">		
 
+	<div style="
+          position: absolute;
+	  top: 45px;
+	  left: 50px;
+	  width: 800px;
+	  font-size: 21px;
+	  font-weight: bold;
+	  color: rgb(238, 193, 190);
+	">
+	  Impliquer et mobiliser les électeurs
+	</div>	
+
+	<div style="
+          position: absolute;
+	  top: 115px;
+	  left: 50px;
+	  width: 800px;
+	  font-size: 21px;
+	  font-weight: bold;
+	  text-align: right;
+	  color: rgb(238, 193, 190);
+	">
+	  Structurer sa campagne en ligne
+	</div>	
+
+	<div style="
+          position: absolute;
+	  top: 180px;
+	  left: 50px;
+	  width: 800px;
+	  font-size: 29px;
+	  font-weight: bold;
+	  text-align: center; 
+	">
+	  Des outils à la pointe de la technologie
+	</div>	
+
+	<div style="
+          position: absolute;
+	  top: 290px;
+	  left: 50px;
+	  width: 700px;
+	  font-size: 21px;
+	  font-weight: bold;
+	  text-align: right;
+	  color: rgb(238, 193, 190);
+	">
+	  Susciter la parole des citoyens sur internet
+	</div>	
+
       </div>
     </div>
   </div>
