Formulaire de contact

--- a/index.htm
+++ b/index.htm
@@ -151,5 +151,22 @@
   </div>
 </div>
 <div id="foot">
+
+  <div id="contact">
+    <form>
+      <label>
+	Entrez votre e-mail, vous serez prévenu lors du lancement&nbsp;:
+	<br/>
+	<input type="text" placeholder="mon-adresse@mail.com"/>
+      </label> 
+      <button type="submit">
+	<span>Prévenez-moi&nbsp;!</span>
+      </button>
+    </form>
+    <div class="thanks">
+      Merci&nbsp;! Nous vous contacterons le jour du lancement. 
+    </div>
+  </div>
+  
 </div>
 
