--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
 	  font-weight: bold;
 	  color: #555;
 	">
-	  Un blog qui aborde les grandes questions...
+	  Un blog qui aborde les questions essentielles...
 	</div>
 	  
 	<div style="
@@ -130,7 +130,7 @@
 	  font-weight: bold;
 	  text-align: center; 
 	">
-	  Des outils à la pointe de la technologie
+	  Les outils en ligne les plus efficaces
 	</div>	
 
 	<div style="
@@ -143,7 +143,7 @@
 	  text-align: right;
 	  color: rgb(238, 193, 190);
 	">
-	  Susciter la parole des citoyens sur internet
+	  Susciter la parole des citoyens sur Internet
 	</div>	
 
       </div>
@@ -155,12 +155,12 @@
   <div id="contact">
     <form>
       <label>
-	Entrez votre e-mail, vous serez prévenu lors du lancement&nbsp;:
+	Entrez votre e-mail, vous recevrez une invitation lors du lancement&nbsp;:
 	<br/>
 	<input type="text" placeholder="mon-adresse@mail.com"/>
       </label> 
       <button type="submit">
-	<span>Prévenez-moi&nbsp;!</span>
+	<span>Invitez-moi&nbsp;!</span>
       </button>
     </form>
     <div class="thanks">
