modification date de lancement

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
       <span style="color:#0055A4">M</span><span style="color:#EF4135">2014</span><span style="color:#DDD">.fr</span>
     </div>
     <div id="clock">
-      30 mars : lancement officiel
+      Début avril : lancement officiel
     </div>
   </div>
 </div>
